K3s/overlays/stage/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volunti
  annotations:
    traefik.io/router.middlewares: doe25-group-13-secure-headers@kubernetescrd

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: volunti-adminer
  annotations:
    traefik.io/router.middlewares: doe25-group-13-secure-headers@kubernetescrd,doe25-group-13-volunti-basic-auth@kubernetescrd
